force-app/main/default/objects/DeploymentComplete__e/DeploymentComplete__e.object-meta.xml
<CustomObject>
    <description>Published when a Salesforce deployment completes. Consumed by the SmokeTestOrchestratorTrigger to automatically initiate post-deployment smoke test execution. May be published by native deployment tooling, CI/CD pipelines, or external deploy tools (Copado, Gearset) that integrate with the smoke test system.</description>
    <label>Deployment Complete</label>
    <pluralLabel>Deployment Completes</pluralLabel>
</CustomObject>