force-app/main/default/objects/DeploymentComplete__e/fields/DeployedBy__c.field-meta.xml
<CustomField>
    <fullName>DeployedBy__c</fullName>
    <description>Username or user ID of the person or service account that initiated the deployment. Published by: deployment tooling or CI/CD pipeline. Consumed by: SmokeTestOrchestratorTrigger to populate InitiatedBy__c on SmokeTestExecution__c for audit trail. Expected format: Salesforce username (user@domain.com) or 18-character User ID.</description>
    <label>Deployed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>