force-app/main/default/objects/DeploymentComplete__e/fields/DeploymentId__c.field-meta.xml
<CustomField>
    <fullName>DeploymentId__c</fullName>
    <description>Salesforce deployment job ID (18-character ID from DeployRequest or the value of DeploymentId__c on SmokeTestExecution__c). Published by: deployment tooling (Copado, Gearset, sf CLI). Consumed by: SmokeTestOrchestratorTrigger to correlate the execution record with the triggering deployment.</description>
    <label>Deployment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>