force-app/main/default/objects/DeploymentComplete__e/fields/DeploymentStatus__c.field-meta.xml
<CustomField>
    <fullName>DeploymentStatus__c</fullName>
    <description>Final status of the deployment that triggered this event. Published by: deployment tooling. Consumed by: SmokeTestOrchestratorTrigger — smoke tests only initiate if status is Succeeded; failed deployments do not trigger smoke test execution. Expected values: Succeeded, Failed, SucceededPartial (max 50 characters).</description>
    <label>Deployment Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>