force-app/main/default/objects/DeploymentComplete__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>UTC datetime when the deployment completed. Published by: deployment tooling. Consumed by: SmokeTestOrchestratorTrigger to set StartTime__c on SmokeTestExecution__c and to calculate deployment-to-test-start latency for SLA monitoring in future epics.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>